Skill manager rework + API
-> commands for skills now are more lenient. They automatically clamp the level to add/set/remove to a correct value

-> commands now use the API

-> json that have incorect "active" field are set to "active = true" by default